ft_services/srcs/yaml/influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        imagePullPolicy: IfNotPresent
        image: influxdb
        ports:
        - containerPort: 8086
          name: influx
        volumeMounts:
        - name: influxdb-ps
          mountPath: /var/lib/influxdb/
      volumes:
      - name: influxdb-ps
        persistentVolumeClaim:
          claimName: influxdb-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
spec:
  selector:
    app: influxdb
  ports:
    - port: 8086
      protocol: TCP
      name: influxdb
      targetPort: 8086
