ft_services/srcs/yaml/phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        imagePullPolicy: IfNotPresent
        image: phpmyadmin
        ports:
        - containerPort: 5000
          name: phpmyadmin
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 5000
      protocol: TCP
      name: phpmyadmin
      nodePort: 5000
  type: NodePort
