ft_services/srcs/yaml/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        imagePullPolicy: IfNotPresent
        image: wordpress
        ports:
        - containerPort: 5050
          name: wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress
  ports:
    - port: 5050
      protocol: TCP
      name: wordpress
      nodePort: 5050
  type: NodePort
